== trunk (2.1.0.rc2)

* enhancements
  * Devise model generator now works with engines

* deprecations
  * Deprecations warnings added on Devise 2.0 are now removed with their features

* bug fix
  * `/users/sign_in` doesn't choke on protected attributes used to select sign in scope (by @Paymium)
  * `failed_attempts` is set to zero after any sign in (including via reset password) (by @rodrigoflores)
  * Added token expiration on timeout (by @antiarchitect)
  * Do not accidentally mark `_prefixes` as private
  * Better support for custom strategies on test helpers (by @mattconnolly)
  * Return `head :no_content` in SessionsController now that most JS libraries handle it (by @julianvargasalvarez)

== 2.1.0.rc

* enhancements
  * Add check_fields! method on Devise::Models to check if the model includes the fields that Devise uses
  * Add `skip_reconfirmation!` to skip reconfirmation

* bug fix
  * Ensure after sign in hook is not called without a resource
  * Fix a term: now on Omniauth related flash messages, we say that we're authenticating from an omniauth provider instead of authorizing
  * Fixed redirect when authenticated mounted apps (by @hakanensari)

* deprecation
  * All devise modules should have a required_fields(klass) module method to help gathering missing attributes

== 2.0.4

Notes: https://github.com/plataformatec/devise/wiki/How-To:-Upgrade-to-Devise-2.0

* bug fix
  * Fix when :host is used with devise_for  (by @mreinsch)
  * Fix a regression that caused Warden to be initialized too late

== 2.0.3 (yanked)

* bug fix
  * Ensure warning is not shown by mistake on apps with mounted engines
  * Fixes related to remember_token and rememberable_options
  * Ensure serializable_hash does not depend on accessible attributes
  * Ensure that timeout callback does not run on sign out action

== 2.0.2

* enhancements
  * Add devise_i18n_options to customize I18n message

* bug fix
  * Ensure Devise.available_router_name defaults to :main_app